Fix image stretching beyond container in Safari
Probably due to this: https://stackoverflow.com/questions/57516373/image-stretching-in-flexbox-in-safari

--- a/styles/index.css
+++ b/styles/index.css
@@ -42,7 +42,7 @@
     display: flex;
     flex-direction: column;
     max-width: 250px;
-    max-height: auto;
+    height: auto;
     flex-wrap: nowrap;
     align-self: right;
 }
